k8s/config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ton-cat-lottery
  labels:
    name: ton-cat-lottery
    project: ton-cat-lottery
